--- a/dom/ejercicios/index.html
+++ b/dom/ejercicios/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+
 <body>
     <input type="checkbox" id="box1" value="opcion-1">
 
     <br>
     <input type="text" id="miInput" name="miInput"></input>
     <br>
-    <div id ="miDiv">Hola! Soy un Div</div>
-    <div id ="div2">Div 2</div>
+    <div id="miDiv">Hola! Soy un Div</div>
+    <div id="hola">Div 2</div>
+    <input type="button" value="ya me cambié" id="myButton">
+    <h1 id="myH1">Soy un título</h1>
     <script>
         /**
          * Crear un input de tipo checkbox.
@@ -21,22 +25,22 @@
          * cambie el estado de clickeado a sin 
          * clickear o viceversa.
          */
-        const toggleChecked = () =>{
-                let check = document.querySelector("#box1");
-                check.checked ? check.checked = false : check.checked=true;
-            };
+        const toggleChecked = () => {
+            let check = document.querySelector("#box1");
+            check.checked ? check.checked = false : check.checked = true;
+        };
         // 02
         /**
          * Dado el siguiente HTML
-        * cambiar el atributo name a miExInput
-        */
-        const changeName = () =>{
+         * cambiar el atributo name a miExInput
+         */
+        const changeName = () => {
             let input = document.querySelector("#miInput");
             console.log(input.name);
             input.name = "miExInput";
             console.log(input.name);
         };
-          // 03
+        // 03
         /**
          * Escribir un HTML con un div.
          * Luego, por ID, modificar el contenido del DIV
@@ -53,32 +57,50 @@
          */
         const changeDiv = () => {
             let miDiv = document.querySelector("#miDiv");
-            miDiv.insertAdjacentHTML ("beforeend", "<ul><li></li><li></li><li></li><li></li><li></li></ul>");
+            miDiv.insertAdjacentHTML("beforeend", "<ul><li></li><li></li><li></li><li></li><li></li></ul>");
             addInfo();
         };
-        const addInfo = () =>{
+        const addInfo = () => {
             let li = document.getElementsByTagName("li");
             let valor = 0;
-            for(let item of li){
-                valor ++;
+            for (let item of li) {
+                valor++;
                 item.innerHTML = valor;
             }
         };
 
-        const cambio =() =>{
-            let info = document.getElementById("#id");
-            let lista;
-            let valor =0;
-            lista.innerHTML = "<ul>";
-            for(i=0;i<5; i++){
-                lista+=(lista.innerHTML="<li>")+ valor++ +(lista.innerHTML="</li>");
+        const cambio = () => {
+            let info = document.getElementById("hola");
+            let lista = "<ul>"
+            let valor = 1;
+            for (i = 0; i < 5; i++) {
+                lista += "<li>" + valor++ + "</li>";
             }
-            if(i==5){
-                lista+=(lista.innerHTML = "</ul>")
+            if (i == 5) {
+                lista += "</ul>"
             }
+            info.innerHTML = lista;
+        };
+
+        //04
+        /**
+         * Escribir una funcion que se llame changeTitle.
+         * Para esto deberemos tener dos elementos,
+         * un input, y un h1. 
+         * Debemos tomar el valor del input y ponerlo como 
+         * el title. Si ya existe texto, reemplazarlo.
+         */
+        const changeTitle = () => {
+            let inputValue = document.querySelector("#myButton");
+            let h1Value = document.querySelector("#myH1");
+            h1Value.textContent= inputValue.value;
+            if (inputValue.value=="ya me cambié"){
+                inputValue.value = "Soy un título"
+            }else{
+                inputValue.value = "ya me cambié"
+            };
         }
     </script>
-
-        </script>
 </body>
+
 </html>
