funcion de agregar al html iniciada (mesa)

--- a/dom/ejercicios/eventos/restaurant/index.html
+++ b/dom/ejercicios/eventos/restaurant/index.html
@@ -29,13 +29,11 @@
 
 
             </table>
-            <button class ="cerrar">Cerrar</button>
-            <button class="eliminar">Eliminar</button>
         </article>
-        <article>
+        <article class ="art">
             <form>
-                <input type="text">
-                <input type="button" value="Agregar Mesa">
+                <input type="text" class="texto" id="txtMesa">
+                <input type="button" value="Agregar Mesa" class ="boton" id="boton">
             </form>
         </article>
     </section>
