agregadas funciones html a la mesa

--- a/dom/ejercicios/eventos/restaurant/index.html
+++ b/dom/ejercicios/eventos/restaurant/index.html
@@ -19,7 +19,7 @@
             <h2 class="margen">Mesas</h2>
         </header>
         <article class="art">
-            <table class="tabla">
+            <table class="tabla" id ="tabla">
                 <tr class="filas">
                     <th>Numero de Mesa</th>
                     <th>Cuenta</th>
@@ -33,10 +33,16 @@
         <article class ="art">
             <form>
                 <input type="text" class="texto" id="txtMesa">
-                <input type="button" value="Agregar Mesa" class ="boton" id="boton">
+                <input type="button" value="Agregar Mesa" class ="boton" id="agregar">
             </form>
         </article>
     </section>
+    <footer>
+        <script src="js/mesas.js"></script>
+        <script src="js/mesasactivas.js"></script>
+        <script src="js/productos.js"></script>
+        <script src="js/listaproductos.js"></script>
+    </footer>
 </body>
 
 </html>
