agregadas funciones a cuenta

--- a/dom/ejercicios/eventos/restaurant/index.html
+++ b/dom/ejercicios/eventos/restaurant/index.html
@@ -59,6 +59,8 @@
     </section>
 
     <footer>
+        <script src="js/productoMesa.js"></script>
+        <script src="js/cuentamesa.js"></script>
         <script src="js/mesas.js"></script>
         <script src="js/mesasactivas.js"></script>
         <script src="js/productos.js"></script>
