--- a/dom/ejercicios/eventos/restaurant/index.html
+++ b/dom/ejercicios/eventos/restaurant/index.html
@@ -35,6 +35,30 @@
             </form>
         </article>
     </section>
+    
+    <section class="seccion">
+        <header class="sec-encabezado">
+            <h2 class="margen">Cargar Productos a Mesa</h2>
+        </header>
+        <article class="art">
+            <table class="tabla" id="tablaCargaProductos">
+                <tr class="filas">
+                    <th>Producto</th>
+                    <th>Cantidad</th>
+                </tr>
+            </table>
+        </article>
+        <article class="art">
+            <form>
+                <select id="mesaCargaCuenta">
+
+                </select>
+                <input type="button" value="Agregar A Mesa" class ="boton" id="agregarAMesa">
+            </form>
+        </article>
+
+    </section>
+
     <section class="seccion">
             <header class="sec-encabezado">
                 <h2 class="margen">Menú</h2>
