--- a/dom/ejercicios/eventos/restaurant/index.html
+++ b/dom/ejercicios/eventos/restaurant/index.html
@@ -30,7 +30,7 @@
         </article>
         <article class ="art">
             <form>
-                <input type="text" class="texto" id="txtMesa">
+                <input type="text" class="texto" id="txtMesa" placeholder="Número de Mesa">
                 <input type="button" value="Agregar Mesa" class ="boton" id="agregarMesa">
             </form>
         </article>
